<resources>
    <string name="app_name">Schul App</string>
    <string name="title_substitution_plan">VPlan</string>
    <string name="title_timetable">Stunden</string>
    <string name="title_marks">Noten</string>
    <string name="title_news">Aktuelles</string>
    <string name="title_more">Mehr</string>
    <string name="title_gta">GTAs</string>
    <string name="title_absence">Abwesenheit</string>
    <string name="title_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
