<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_substitution_plan"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_substitution_plan" />

    <item
        android:id="@+id/navigation_timetable"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_timetable" />

    <item
        android:id="@+id/navigation_marks"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_marks" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_gta"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_gta"/>

    <item
        android:id="@+id/navigation_absence"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_absence" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_more" />

</menu>
